--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "full-stack-arweave",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,7 +12,10 @@
   "dependencies": {
     "next": "12.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-markdown": "^8.0.3",
+    "uuid": "^9.0.0",
+    "warp-contracts": "^1.2.4"
   },
   "devDependencies": {
     "eslint": "8.23.1",
